# course_work_5

./: README.md  pyproject.toml
src/: dbcreator.py  dbmanager.py  hhparser.py  main.py  queries.sql
